MVP fully functioning (1245)

--- a/DiceRoll/Base.lproj/Main.storyboard
+++ b/DiceRoll/Base.lproj/Main.storyboard
@@ -72,6 +72,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0-0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fe7-qe-xdw">
+                                <rect key="frame" x="121" y="44" width="173" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
@@ -91,6 +98,7 @@
                         <outlet property="threeAgo" destination="S4x-dw-dQa" id="aed-Vy-VC7"/>
                         <outlet property="totalText" destination="YDp-xh-slM" id="8ya-A3-9HS"/>
                         <outlet property="twoAgo" destination="nhO-Lo-ufv" id="iCg-De-wrh"/>
+                        <outlet property="winLossTracker" destination="fe7-qe-xdw" id="CBk-ex-pbJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
